Prevent y, g, and j from being clipped in inputs

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -67,7 +67,7 @@ $button-border-height: 3px;
 
   &--inline & {
     &__inner {
-      padding: $input-padding 1rem;
+      padding: 0.5rem 1rem;
     }
   }
 
